<resources>
    <string name="app_name">QubeVM</string>
    <string name="app_short_name">Qube</string>
    <string name="auto">Auto</string>
    <string name="button_send_text">Send Text</string>
    <string name="center_mouse">Mouse</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="shutdown">Shutdown</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="ctrl_c">Ctrl-c</string>
    <string name="disconnect">Disconnect</string>
    <string name="external_mouse">External Mouse</string>
    <string name="stretch_to_screen">Stretch to Screen</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="on">On</string>
    <string name="one_to_one">Normal (1:1)</string>
    <string name="scaling">Scaling</string>
    <string name="showkbd_label">Keyboard</string>
    <string name="help">Help</string>
    <string name="drives">Drives</string>
    <string name="share_folder_server">Shared Folder Server</string>
    <string name="share_folder_stopped_title">Shared Folder Server isn\'t running</string>
    <string name="share_folder_stopped_desc">Shared Folder Server is a feature that allows you to share your files by opening an HTTP server, allows VM to access device\'s Download folder, it detects the new files directly, unlike normal Shared Folder (vvfat), vvfat needs to reboot the VM to take affect and see the new files</string>
    <string name="share_folder_running_title">Shared Folder Server is running</string>
    <string name="share_folder_running_desc">Shared Folder Server is hosted at:</string>
    <string name="share_folder_start_error">Could not start the sharing server. The port may already be in use</string>
    <string name="share_server_start">Share Server</string>
    <string name="share_server_stop">Stop Sharing</string>
    <string name="copy_link">Copy link</string>
    <string name="volume">Volume</string>
    <string name="Default" translatable="false">default</string>
    <string name="hide_toolbar">Hide Toolbar</string>
    <string name="view_log">View Log</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshot_saved">Screenshot saved: </string>
    <string name="screenshot_failed">Screenshot failed</string>
    <string name="display">Display</string>
    <string name="displayInfoTitle">Display</string>
    <string name="displayInfoMessage"><![CDATA[
        <b>QGE (Qube Graphics Engine)</b> is the optimized built-in display wrapper, it receives and displays the frames in native way, without latency<br/><br/>
        <b>VNC (Virtual Network Computing)</b> is the balanced choice for those who want to run the app as a host, it starts QEMU\'s VNC server without opening a viewer inside the app, so you can connect to the VM from any external VNC client instead.
    ]]></string>
    <string name="absolutePointerInstructions">Make sure the guest os supports touch screen devices!\n\n \
        Choose Mouse = \"usb-tablet\" from Qube before you boot the machine.</string>
    <string name="externalMouseInstructions">Plug in your USB/Bluetooth Mouse in your Android device.</string>
    <string name="toggle_virtual_keys">Toggle Virtual Keys</string>
    <string name="welcomeText">Welcome to Qube Emulator, a port of QEMU for Android devices. Qube can emulate several operating systems. For links to downloads, guides, and virtual disk images visit the Qube Wiki. Download software and images only from trusted websites!</string>
    <string name="checkForUpdates">Check for Updates on Startup</string>
    <string name="sdcardNotMounted">Error: SD card is not mounted</string>
    <string name="vmNotRunning">VM not running</string>
    <string name="Running">Running</string>
    <string name="Stopped">Stopped</string>
    <string name="orientation">Orientation</string>
    <string name="keyboard">Keyboard</string>
    <string name="mouse">Mouse</string>
    <string name="desktopMode">Desktop Mode</string>
    <string name="highPriorityWarning">Warning! High Priority might increase emulation speed but will slow your phone down!</string>
    <string name="advancedTools">Advanced Tools</string>
    <string name="tapUserId">TAP User Id</string>
    <string name="tapNotSupportInstructions">\"Your device doesn\'t support TAP, use \'User\' network mode instead \"</string>
    <string name="network">Network</string>
    <string name="externalNetworkWarning">Warning! Enabling external network for images you don\'t trust or containing old OSes is not recommended. If not use network \'None\' before running the virtual machine.\n</string>
    <string name="faq">FAQ</string>
    <string name="open">Open</string>
    <string name="enableMTTCG">Enable MTTCG</string>
    <string name="enableMTTCGWarning">Enabling MTTCG requires a phone with multi cores cpu.\nIf you don\'t know what this is press Cancel.\n\nIf you experience app crashing or freezing disable this option. Do you want to continue?</string>
    <string name="mttcgHelp">Help</string>
    <string name="tcgBufferLabel">TCG Buffer</string>
    <string name="failToCreateMachineDirError">Could not create internal machine directory</string>
    <string name="chooseDirToCreateImage">Choose a directory to create your image</string>
    <string name="ImageCreated">Image Created</string>
    <string name="vncServer">VNC Server</string>
    <string name="Enable">Enable</string>
    <string name="DeleteVM">Delete VM</string>
    <string name="deleteVMWarning">Delete VM? you will lose the machine configuration only, disk images files will not be deleted</string>
    <string name="NoMachineSelected">No Machine selected</string>
    <string name="multipleVCPU">Multiple vCPUs</string>
    <string name="multipleVCPUWarning">Warning! Setting Multiple Virtual CPUs will NOT result in additional performance unless you use KVM or MTTCG. Your device might even be slow or the Guest OS might hang so it is advised to use 1 CPU. \n\n</string>
    <string name="disableTSCInstructions">If your guest OS is not able to boot check option \'Disable TSC\' and restart the VM.</string>
    <string name="DoYouWantToContinue">Do you want to continue?</string>
    <string name="vCPUHelp">Help</string>
    <string name="Auto">Auto</string>
    <string name="Landscape">Landscape</string>
    <string name="LandscapeReverse">Landscape Reverse</string>
    <string name="Portrait">Portrait</string>
    <string name="PortraitReverse">Portrait Reverse</string>
    <string name="PleaseWait">Please Wait</string>
    <string name="InstallingBIOS">Installing BIOS</string>
    <string name="CouldNotOpenDocFile">Could not open DocumentFile</string>
    <string name="PleaseReassingYourDiskFiles">Please re-open your disk files from the file manager</string>
    <string name="RemovableDrives">Removable Drives</string>
    <string name="EjectedDevice">Ejected device</string>
    <string name="ChangedDevice">Changed device</string>
    <string name="Error">Error</string>
    <string name="ChangeDirectory">Change Directory</string>
    <string name="InstallRoms">Install Roms</string>
    <string name="CreateMachine">Create Machine</string>
    <string name="DeleteMachine">Delete Machine</string>
    <string name="Settings">Settings</string>
    <string name="ViewLog">View Log</string>
    <string name="Changelog">Changelog</string>
    <string name="License">License</string>
    <string name="Exit">Exit</string>
    <string name="TapDeviceFound">TAP Device found</string>
    <string name="tunDeviceWarning">Warning! Make sure device /dev/net/tun has appropriate permissions\nUser ID</string>
    <string name="TAPHelp">Help</string>
    <string name="SomethingWentWrong">Something went wrong</string>
    <string name="CopySummary">Copy</string>
    <string name="UnknownErrorCause">The VM stopped unexpectedly and the exact cause could not be determined.</string>
    <string name="AllowExternalVNCConnections">Allow External VNC Connections</string>
    <string name="AllowExternalVNCSummary">Allow external VNC Clients. Needs app restart. VNC Connections are not encrypted so only use in a private network that you trust!</string>
    <string name="EnableQMPServerSummary">Run QMP Server. This is needed to changing removable drives.</string>
    <string name="EnableQMPServer">Enable QMP Server</string>
    <string name="AllowExternalQMPConnectionsSummary">Allow external QMP CLients. Needs app restart. Connections are not encrypted so only use in a private network that you trust!</string>
    <string name="AllowExternalQMPConnections">Allow External QMP Connections</string>
    <string name="HighPriority">High Priority</string>
    <string name="AlwaysShowToolbar">Always show the Toolbar</string>
    <string name="AlwaysToolbar">Always Toolbar</string>
    <string name="CheckSoftwareUpdates">Check for Software Updates</string>
    <string name="CheckSoftwareUpdatesSummary">Check for software updates on startup</string>
    <string name="FailedToSaveLogFile">\"Failed to save log file: \"</string>
    <string name="SharedFolder">Shared Folder</string>
    <string name="SharedFolderNotSupported">Shared Folder location is not accessible on this device and was skipped. Please choose a folder on the device\'s main internal storage.</string>
    <string name="AudioCard">Audio Card</string>
    <string name="PointerSpeed">Pointer Speed</string>
    <string name="PointerSpeedSummary">Cursor movement speed in trackpad/relative mode</string>
    <string name="RefreshRate">VM Refresh Rate</string>
    <string name="RefreshRateSummary">Virtual Machine display refresh rate, Higher values are smoother but use more resources</string>
    <string name="mouseButtonDelay">Mouse Button Click Delay</string>
    <string name="mouseButtonDelaySummary">Delay between mouse button clicks. Lower values have better performance but mouse events might be not be understood by the emulator so use higher values.</string>
    <string name="diskCache">Disk Cache</string>
    <string name="diskCacheSummary">Disk Cache might not work with Legacy Manager! If you encounter issues set to Default</string>
    <string name="ClearDirHistory">Clear Directory History</string>
    <string name="ClearDirHistorySummary">Remove all remembered file paths from storages, removable storages</string>
    <string name="section_boot">Boot</string>
    <string name="boot_from_label">Boot from Device</string>
    <string name="kernel_label">Kernel</string>
    <string name="initrd_label">Initrd</string>
    <string name="append_label">Append</string>
    <string name="append_hint">ie: root=/dev/sda1</string>
    <string name="Save">Save</string>
    <string name="pref_customize_virtual_keys">Customize Virtual Keys</string>
    <string name="msg_tap_to_select_a_key">Tap a key to select it</string>
    <string name="title_add_key">Add key</string>
    <string name="title_move_up">Move up</string>
    <string name="title_move_down">Move down</string>
    <string name="title_delete_key">Delete key</string>
    <string name="customizeVirtualKeysSummary">Add, remove or reorder virtual keys</string>
    <string name="ShowAllVirtualKeys">Show all keys by default</string>
    <string name="ShowAllVirtualKeysSummary">Adds F1-F12, Insert and Delete to the default layout</string>
    <string name="OpenVirtualKeysWithKeyboard">Open with keyboard</string>
    <string name="OpenVirtualKeysWithKeyboardSummary">Show virtual keys automatically when the soft keyboard opens</string>
    <string name="UseSuperWithSingleTap">Single tap for Super key</string>
    <string name="UseSuperWithSingleTapSummary">Send Super key on a single tap instead of toggling it</string>
    <string name="VirtualKeysRowCount">Row count</string>
    <string name="VirtualKeysRowCountSummary">Number of rows used to arrange virtual keys</string>
</resources>