<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Qube Graphics Engine">
        <ListPreference
            android:defaultValue="60"
            android:entries="@array/refreshRateLabels"
            android:entryValues="@array/refreshRateValues"
            android:key="refreshRatePref"
            android:summary="@string/RefreshRateSummary"
            android:title="@string/RefreshRate" />

        <ListPreference
            android:defaultValue="100"
            android:entries="@array/pointerSpeedLabels"
            android:entryValues="@array/pointerSpeedValues"
            android:key="pointerSpeedPref"
            android:summary="@string/PointerSpeedSummary"
            android:title="@string/PointerSpeed" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="ShowFullscreen"
            android:summary="Show Fullscreen"
            android:title="Fullscreen" />

        <ListPreference
            android:defaultValue="100"
            android:entries="@array/mouseButtonDelayLabels"
            android:entryValues="@array/mouseButtonDelayValues"
            android:key="mousePressDelay"
            android:summary="@string/mouseButtonDelaySummary"
            android:title="@string/mouseButtonDelay" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Files">
    <Preference
        android:key="clearDirHistory"
        android:title="@string/ClearDirHistory"
        android:summary="@string/ClearDirHistorySummary" />

</PreferenceCategory>

    <PreferenceCategory android:title="Screen">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/orientationLabels"
            android:entryValues="@array/orientationValues"
            android:key="orientationPref"
            android:summary="@string/orientation"
            android:title="@string/orientation" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="AlwaysShowMenuToolbar"
            android:summary="@string/AlwaysShowToolbar"
            android:title="@string/AlwaysToolbar" />

    </PreferenceCategory>


    <PreferenceCategory android:title="QMP">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enableQMP"
            android:summary="@string/EnableQMPServerSummary"
            android:title="@string/EnableQMPServer" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="enableQMP"
            android:key="enableExternalQMP"
            android:summary="@string/AllowExternalQMPConnectionsSummary"
            android:title="@string/AllowExternalQMPConnections" />

    </PreferenceCategory>
    <PreferenceCategory android:title="VNC">

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="enableQMP"
            android:key="enableExternalVNC"
            android:summary="@string/AllowExternalVNCSummary"
            android:title="@string/AllowExternalVNCConnections" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Virtual Keys">
        <Preference
            android:key="customizeVirtualKeys"
            android:title="@string/pref_customize_virtual_keys"
            android:summary="@string/customizeVirtualKeysSummary" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/vkRowCountLabels"
            android:entryValues="@array/vkRowCountValues"
            android:key="vkRowCount"
            android:summary="@string/VirtualKeysRowCountSummary"
            android:title="@string/VirtualKeysRowCount" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="vkShowAll"
            android:summary="@string/ShowAllVirtualKeysSummary"
            android:title="@string/ShowAllVirtualKeys" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="vkOpenWithKeyboard"
            android:summary="@string/OpenVirtualKeysWithKeyboardSummary"
            android:title="@string/OpenVirtualKeysWithKeyboard" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="vkUseSuperWithSingleTap"
            android:summary="@string/UseSuperWithSingleTapSummary"
            android:title="@string/UseSuperWithSingleTap" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Disk">
        <ListPreference
            android:defaultValue="@string/Default"
            android:entries="@array/diskCacheLabels"
            android:entryValues="@array/diskCacheValues"
            android:key="diskCachePref"
            android:summary="@string/diskCacheSummary"
            android:title="@string/diskCache" />
    </PreferenceCategory>
</PreferenceScreen>