<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bootSectionl"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|center_vertical"
    android:background="@drawable/border"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:showIn="@layout/qube_main">


    <LinearLayout
        android:id="@+id/bootheaderl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/hard_drive_24px" />


        <TextView
            android:id="@+id/bootsectionStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center|center_vertical"
            android:padding="10dp"
            android:text="@string/section_boot"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/bootsectionsummaryStr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:maxLines="3"
            android:minLines="2"
            android:padding="10dp"
            android:text=""
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bootsectionDetails"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/bootfroml"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:paddingRight="5dp"
                android:src="@drawable/hard_drive_24px" />

            <TextView
                android:id="@+id/bootfromstr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/boot_from_label"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/bootfromval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:singleLine="true"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/kernell"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:paddingRight="5dp"
                android:src="@drawable/folder_24px" />

            <TextView
                android:id="@+id/kernelStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/kernel_label"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/kernelval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:singleLine="true"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/initrdl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:paddingRight="5dp"
                android:src="@drawable/folder_24px" />

            <TextView
                android:id="@+id/initrdStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/initrd_label"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/initrdval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:singleLine="true"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/appendl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/appendStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/append_label"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/appendval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/append_hint"
                android:inputType="textFilter|textNoSuggestions"
                android:singleLine="true"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>